chore: health handler
