# docs/swagger.json
@@ -4,6 +4,26 @@
         "contact": {}
     },
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Returns current server time to verify service is running",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "current server time",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Get all users",
